# pacos

./: .gitignore  Cargo.toml  ab.rs  binding.gyp  grammar.js  index.html  langium-config.json  langium-quickstart.md  package-lock.json  package.json  readme.md  sample.ks  sample.palm  scratch.hs  scratch.pc  spec.gleam  tsconfig.monarch.json
example/: aa.kk  fn.mi  fn.palm  sample.palm
examples/: all.kt  (+2 more)
tooling/tree-sitter-plum/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  readme.md  setup.py
tooling/tree-sitter-plum/.github/workflows/: fuzz.yml
tooling/tree-sitter-plum/bindings/c/: tree-sitter-plum.h  tree-sitter-plum.pc.in
tooling/tree-sitter-plum/bindings/go/: binding.go  binding_test.go  go.mod
tooling/tree-sitter-plum/bindings/node/: binding.cc
tooling/tree-sitter-plum/bindings/python/tree_sitter_kestrel/: binding.c
tooling/tree-sitter-plum/bindings/rust/: build.rs  lib.rs
tooling/tree-sitter-plum/src/: grammar.json  node-types.json  parser.c  scanner.c
tooling/tree-sitter-plum/test/corpus/: assert.txt  assign.txt  enum.txt  function.txt  if.txt  literals.txt  match.txt  trait.txt  type.txt
tree-sitter-kestrel/: Cargo.toml  binding.gyp  grammar.js  package.json  pyproject.toml  readme.md  setup.py
tree-sitter-kestrel/.github/workflows/: fuzz.yml
tree-sitter-kestrel/bindings/c/: tree-sitter-kestrel.pc.in
tree-sitter-kestrel/bindings/go/: binding_test.go
tree-sitter-kestrel/bindings/node/: binding.cc
tree-sitter-kestrel/bindings/python/tree_sitter_kestrel/: __init__.py
tree-sitter-kestrel/bindings/rust/: lib.rs
tree-sitter-kestrel/bindings/swift/TreeSitterKestrel/: kestrel.h
tree-sitter-kestrel/prebuilds/darwin-arm64/: tree-sitter-kestrel.node
tree-sitter-kestrel/src/: grammar.json  node-types.json  parser.c
tree-sitter-kestrel/test/corpus/: assign.txt  enum.txt  fn.txt  if.txt  match.txt  object.txt  record.txt  statement.txt  types.txt
(+117 files in other folders)
