[package]
name = "tree-sitter-palm"
description = "palm grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "palm"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/pyrossh/tree-sitter-palm"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
