[package]
name = "tree-sitter-kestrel"
description = "kestrel grammar for tree-sitter"
version = "0.20.4"
authors = [
	"pyrossh <pyros2097@gmail.com>",
]
license = "MIT"
readme = "bindings/rust/README.md"
keywords = ["incremental", "parsing", "kestrel"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/pyrossh/tree-sitter-kestrel"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "~1.0"
